理通业务逻辑以使便于本地开发

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ if (navigator.platform.indexOf('Win32') >= 0) {
     // pc
 } else {
     // phone
-    window.location.href = "../m/mindex.html";
+    window.location.href = "../easybook/m/mindex.html";
 }
 </script>
 </html>
