--- a/m/mlogin.html
+++ b/m/mlogin.html
@@ -16,8 +16,8 @@
 <!--  Bootstrap4 核心 JavaScript 文件 -->
 <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="../easybook/css/mlogin.css?7999d">
-<link rel="icon" href="../easybook/img/smallico.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="../css/mlogin.css?7999d">
+<link rel="icon" href="../img/smallico.ico" type="image/x-icon" />
 
 
 </head>
@@ -28,7 +28,7 @@
 	<div class="login-box">
 		<div class="containerT">
 		      <a href="mindex.html">
-	<img src="../easybook/img/easybookico.png" style="width:30%;height:20%;margin-top:48px;">
+	<img src="../img/easybookico.png" style="width:30%;height:20%;margin-top:48px;">
 	</a>
 		<h1>安图 - 一步登入</h1>
 			<form class="form" id="entry_form">
