--- a/m/msearch.html
+++ b/m/msearch.html
@@ -18,9 +18,9 @@
 <body>
 
 <div class="menu">
-  <div class="submenu text-center"><a class="active" href="mindex.html"><img src="../easybook/img/m/home.svg" class="menuimg"><div class="menutext ">主页</div></a></div>
-  <div class="submenu text-center"><a href="#search"><img src="../easybook/img/m/search-s.svg" class="menuimg"><div class="menutext selected">搜索</div></a></div>
-  <div class="submenu text-center"><a href="myini.html"><img src="../easybook/img/m/my.svg" class="menuimg"><div class="menutext">我的</div></a></div>
+  <div class="submenu text-center"><a class="active" href="mindex.html"><img src="../img/m/home.svg" class="menuimg"><div class="menutext ">主页</div></a></div>
+  <div class="submenu text-center"><a href="#search"><img src="../img/m/search-s.svg" class="menuimg"><div class="menutext selected">搜索</div></a></div>
+  <div class="submenu text-center"><a href="myini.html"><img src="../img/m/my.svg" class="menuimg"><div class="menutext">我的</div></a></div>
 </div>
 
 </body>
