--- a/m/myini.html
+++ b/m/myini.html
@@ -38,9 +38,9 @@
 
 
 <div class="menu">
-  <div class="submenu text-center"><a class="active" href="mindex.html"><img src="../easybook/img/m/home.svg" class="menuimg"><div class="menutext ">主页</div></a></div>
-  <div class="submenu text-center"><a href="msearch.html"><img src="../easybook/img/m/search.svg" class="menuimg"><div class="menutext ">搜索</div></a></div>
-  <div class="submenu text-center"><a href="#myini"><img src="../easybook/img/m/my-s.svg" class="menuimg"><div class="menutext selected">我的</div></a></div>
+  <div class="submenu text-center"><a class="active" href="mindex.html"><img src="../img/m/home.svg" class="menuimg"><div class="menutext ">主页</div></a></div>
+  <div class="submenu text-center"><a href="msearch.html"><img src="../img/m/search.svg" class="menuimg"><div class="menutext ">搜索</div></a></div>
+  <div class="submenu text-center"><a href="#myini"><img src="../img/m/my-s.svg" class="menuimg"><div class="menutext selected">我的</div></a></div>
 </div>
 </body>
  <script language="javascript">  
