--- a/m/mindex.html
+++ b/m/mindex.html
@@ -65,9 +65,9 @@
 
 
 <div class="menu">
-  <div class="submenu text-center"><a class="active" href="#home"><img src="../easybook/img/m/home-s.svg" class="menuimg"><div class="menutext selected">主页</div></a></div>
-  <div class="submenu text-center"><a href="msearch.html"><img src="../easybook/img/m/search.svg" class="menuimg"><div class="menutext">搜索</div></a></div>
-  <div class="submenu text-center"><a href="myini.html"><img src="../easybook/img/m/my.svg" class="menuimg"><div class="menutext">我的</div></a></div>
+  <div class="submenu text-center"><a class="active" href="#home"><img src="../img/m/home-s.svg" class="menuimg"><div class="menutext selected">主页</div></a></div>
+  <div class="submenu text-center"><a href="msearch.html"><img src="../img/m/search.svg" class="menuimg"><div class="menutext">搜索</div></a></div>
+  <div class="submenu text-center"><a href="myini.html"><img src="../img/m/my.svg" class="menuimg"><div class="menutext">我的</div></a></div>
 </div>
 
 </body>
