--- a/introm.html
+++ b/introm.html
@@ -20,10 +20,10 @@
 
 	<img src="../easybook/img/qrcode.png">
 		<h1>使用手机扫描上方二维码</h1>
-		<h1>或手机直接访问 http://129.28.142.69</h1>
+		<h1>或手机直接访问 http://39.106.218.18</h1>
 		<h1>即可随时随地上安图</h1>
 			<div class="btn-border">
-		<a href="index.html"><button class="btn">继续使用电脑版</button></a>
+		<a href="index.jsp"><button class="btn">继续使用电脑版</button></a>
 	</div>
 
 
